--- a/package.json
+++ b/package.json
@@ -2,38 +2,28 @@
   "name": "nintynine_boundaries-app",
   "version": "0.1.0",
   "private": false,
+  "type": "module",
   "scripts": {
-    "build": "routify -b && rollup -c",
-    "myserver": "rollup -c -w",
-    "dev": "routify -c myserver",
-    "start": "sirv public --single"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@roxi/routify": "^2.18.5",
-    "@sveltech/routify": "^1.1.1-1",
-    "node-sass": "^7.0.1",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sirv-cli": "^2.0.2",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^4.10.6"
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "svelte": "^5.46.1",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.0"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "bulma": "^0.9.3",
-    "flag-icons": "^6.2.0",
-    "svelma": "^0.4.5",
-    "svelte-copy-to-clipboard": "^0.2.5",
-    "svelte-fa": "^2.4.0",
-    "svelte-select": "^4.4.7"
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "ag-grid-community": "^35.0.0",
+    "daisyui": "^5.5.14",
+    "flag-icons": "^7.2.3",
+    "svelte-fa": "^4.0.3",
+    "svelte-select": "^5.8.3"
   }
 }
